--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
 	<name>thenextgoogle</name>
 	<description>Demo Project Teamcity Kotlin DSL</description>
 
-	<properties>
+	<!-- <properties>
 		<java.version>11</java.version>
-	</properties>
+	</properties> -->
 
 	<dependencies>
 		<dependency>
